# rpackwiz

./: Cargo.toml
cli/: Cargo.toml
src/: hash.rs  lib.rs  main.rs  model.rs
