[package]
name = "rpackwiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.7"
hex = { version = "0.4.3", features = ["serde"] }
md-5 = "0.10.5"
murmur2 = "0.1.0"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10.5"
sha2 = "0.10.7"
toml = "0.7.6"
